[gd_scene load_steps=3 format=3 uid="uid://c5l7lb2hu31xs"]

[ext_resource type="Script" path="res://scenes/classes/character_card/character_card.gd" id="1_08gqs"]
[ext_resource type="Script" path="res://scenes/classes/character_preview/character_preview_rect.gd" id="2_l6u87"]

[node name="CharacterCard" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_08gqs")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CharacterDisplay" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_l6u87")
